--- a/mc/comment-box/style.css
+++ b/mc/comment-box/style.css
@@ -10,7 +10,7 @@ p {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.comment-text[contenteditable='true'] {
+.comment-text[contenteditable="true"] {
   outline: 1px solid #ccc;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 }
